# fidlib

./: AUTHORS  Makefile.am  README.md  bootstrap.sh  configure.ac  fidlib.c  fidlib.pc.in  fidmkf.h  fidrf_cmdlist.h  firun.c  mk-firun
